blueprint saving and some other gummi stuff